--- a/wr_QL.ipynb
+++ b/wr_QL.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import gym\n",
+    "import random\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from gym import error, spaces, utils\n",
